# rust-uart-radio

./: Cargo.toml  README.md  program-recv.sh  program-send.sh  program.sh  receive.hex  send.hex
examples/: receive.rs  send.rs
src/: main.rs
